--- a/letmeask/src/styles/rooms.scss
+++ b/letmeask/src/styles/rooms.scss
@@ -13,6 +13,13 @@
       > img {
         max-height: 45px;
       }
+      > div {
+        display: flex;
+        gap:16px;
+        button {
+          height: 40px;
+        }
+      }
     }
   }
 
@@ -93,6 +100,10 @@
           }
         }
       }
+    }
+
+    .question-list{
+      margin-top:32px;
     }
   }
 }
